# messaging-system

./: Cargo.toml  notes.md  t.py
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: chats.rs  from_server.rs  hashing.rs  internal_commands.rs  lib.rs  main.rs  to_server.rs
client/ui/: index.html  script.js  styles.css
server/: .env  Cargo.toml  Dockerfile  db.sql  docker-compose.yml  entrypoint.sh
server/src/: client.rs  client_process.rs  commands.rs  container.rs  lib.rs  main.rs  manager.rs  message.rs  model.rs
src/: client.rs  commands.rs  container.rs  lib.rs  main.rs  message.rs
test-client/: ;
test-client/src/: lib.rs
