[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
petgraph = "0.6.4"

sqlx = { version = "0.7.3", features = [ "runtime-tokio-rustls", "mysql", "postgres", "macros" ] }
password-auth = "1.0.0"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
